--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "myapp",
   "version": "1.0.0",
   "description": "Alpaca middle layer with Jaeyoon Jung as admin",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
